--- a/app/views/ads/list.html.erb
+++ b/app/views/ads/list.html.erb
@@ -5,7 +5,7 @@
         <div class="twelve columns">
             <%= render layout: "gray_box", locals: {title: "Dine annonser"} do %>
                 <p>
-                    Under ser du en oversikt over dine annonser. Her kan du
+                    Her finner du en oversikt over dine annonser. Her kan du
                     se hvilke annonser som er aktive eller inaktive.
                     Om du ønsker å endre selve annonsen, kan du gjøre
                     dette ved å klikke på annonsen det gjelder.
