--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="nine columns">
             <%= render layout: "gray_box", locals: {title: "Aktiviteter"} do %>
-                Under ser du dine siste aktiviteter. Om du ser etter gamle leieforhold
+                Her finner du dine siste aktiviteter. Om du ser etter gamle leieforhold
                 finner du det under <a href="#">leiehistorikk.</a>
             <% end %>
 
