--- a/app/views/users/_new_requests_header_box.html.erb
+++ b/app/views/users/_new_requests_header_box.html.erb
@@ -1,2 +1,2 @@
-Under ser du dine siste aktiviteter. Om du ser etter gamle leieforhold,
+Her finner du dine siste aktiviteter. Om du ser etter gamle leieforhold,
 finner du det under <a href="#">leiehistorikk.</a>
