--- a/app/views/users/rental_history.html.erb
+++ b/app/views/users/rental_history.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="twelve columns">
              <%= render layout: "gray_box", locals: { title: 'Leiehistorikk' } do %>
-                Under finner du oversikt over leieforhold hvor du enten
+                Her finner du oversikt over leieforhold hvor du enten
                 har leid ut selv, eller leid av andre.
              <% end %>
 
