--- a/app/views/favorite_ads/index.html.erb
+++ b/app/views/favorite_ads/index.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="twelve columns">
             <%= render layout: "gray_box", locals: { title: 'Favoritter' } do %>
-                Under finner du alle annonsene du har lagt til som favoritt.
+                Her finner du alle annonsene du har lagt til som favoritt.
              <% end %>
 
             <div>
