--- a/app/views/ads/list.html.erb
+++ b/app/views/ads/list.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="twelve columns">
+        <div class="eight columns">
             <%= render layout: "gray_box", locals: {title: "Dine annonser"} do %>
                 <p>
                     Her finner du en oversikt over dine annonser. Her kan du
