--- a/app/views/favorite_ads/index.html.erb
+++ b/app/views/favorite_ads/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="twelve columns">
+        <div class="eight columns">
             <%= render layout: "gray_box", locals: { title: 'Favoritter' } do %>
                 Her finner du alle annonsene du har lagt til som favoritt.
              <% end %>
