Change to eight columns on rental history

--- a/app/views/users/rental_history.html.erb
+++ b/app/views/users/rental_history.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="twelve columns">
+        <div class="eight columns">
              <%= render layout: "gray_box", locals: { title: 'Leiehistorikk' } do %>
                 Her finner du oversikt over leieforhold hvor du enten
                 har leid ut selv, eller leid av andre.
