--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -183,12 +183,12 @@
                         leieforhold kan du gjøre det her.
                     </div>
                     <div>
-                        <span class="price-adder__label">Ved utleie over</span>
+                        <span class="main-price__label">Ved utleie over</span>
                         <%= f.telephone_field :effective_from, class: 'price-adder__days', min: 2 %>
                         <span>dager</span>
                     </div>
                     <div>
-                        <span class="price-adder__label">Reduseres pris per dag til</span>
+                        <span class="main-price__label">Reduseres pris per dag til</span>
                         <%= f.telephone_field :payin_amount_in_h, class: 'price-adder__price' %>
                         <span>kr</span>
                     </div>
