Added partial for activity, removed deprecated partial

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -10,7 +10,7 @@
             <% end %>
 
             <section class="u-push-down">
-                <%= render partial: "incoming_request_item", collection: @bookings, as: 'booking' %>
+                <%= render partial: "activity_item", collection: @bookings, as: 'booking' %>
             </section>
         </div>
     </div>
