fixed language special pricing

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -179,7 +179,7 @@
 
                     <div class="help-box u-push-down">
                         Pris per enkelt dag må være minst 99 kr.
-                        Vil du gi en lavere dagnpris for lengre
+                        Vil du gi en lavere pris per dag ved lengre
                         leieforhold kan du gjøre det her.
                     </div>
                     <div>
