--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@location) do |f| %>
     <% if @location.errors.any? %>
         <div id="error_explanation">
-            <h2><%= pluralize(@location.errors.count, "error") %> prohibited this location from being saved:</h2>
+            <h2><!-- TRANSLATEME: -->Kunne ikke lagre denne sted på grunn av:</h2>
             <ul>
                 <% @location.errors.full_messages.each do |message| %>
                     <li><%= message %></li>
@@ -28,6 +28,7 @@
     </div>
 
     <div class="actions">
-        <%= f.submit "Legg til sted", class: "button" %>
+        <!-- TRANSLATEME: (button text, i think 'lagre sted' not ok...) -->
+        <%= f.submit "Lagre sted", class: "button" %>
     </div>
 <% end %>
