--- a/app/views/locations/_list.html.erb
+++ b/app/views/locations/_list.html.erb
@@ -16,7 +16,7 @@
                         <%= "#{location.address_line}, #{location.post_code} #{location.city}" %>
                         <small><%= link_to "Rediger", edit_location_path(location) %></small>
                     </span>
-                    <span><%= button_to 'Slett', location, method: :delete, class: 'button', form_class: 'u-inline u-pull-right', data: {confirm: 'Er du sikker på at du vil slette?'} %></span>
+                    <span><%= button_to 'Slett', location, method: :delete, class: 'button', form_class: 'u-inline u-pull-right', data: {confirm: 'Er du sikker på at du vil slette?'}, disabled: location.in_use? %></span>
                 </li>
             <% end %>
         </ol>
