--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -85,7 +85,7 @@
                         <small>
                             Telefonnummer <%= @user.unconfirmed_phone_number %> er ikke bekreftet!
                             <% if not @user.unconfirmed_phone_number.blank? %>
-                                <%= link_to 'Bekreft telefonnummer nå', '#verify-phone' %>
+                                <%= link_to 'Bekreft telefonnummer nå', verify_mobile_users_path %>
                                 <%#= link_to 'send ny melding', foo_bar_path %>
                                 <%# FIXME(RA): Create a controller method to send a New SMS. Should refuse to send too often, otherwise we go bankrupt. %>
                             <% end %>
