New wording in ad input

--- a/app/views/payin_rules/_ad_price_estimate.html.erb
+++ b/app/views/payin_rules/_ad_price_estimate.html.erb
@@ -20,7 +20,7 @@
             </i>
         </div>
         <div class="main-price__row">
-            <strong class="main-price__label">Utebetalt til deg: </strong>
+            <strong class="main-price__label">Utbetalt til deg per dag: </strong>
             <strong class="main-price__value">
             <%= format_monetary_full_pretty( @ad.booking_calculator.payout_amount(@payin_rule) ) %>
             </strong>
