Added error icon to error list partial

--- a/app/views/ads/_ad_input_errors.html.erb
+++ b/app/views/ads/_ad_input_errors.html.erb
@@ -1,10 +1,12 @@
 <%
     errors = @ad.errors.values.flatten
 %>
-<% if errors.any? %>
-    <ul>
-        <% errors.each do |e| %>
-            <li><%= e %></li>
-        <% end %>
-    </ul>
-<% end %>
+<div class="ad-input-errors">
+    <% if errors.any? %>
+        <ul  class="ad-input-errors__list">
+            <% errors.each do |e| %>
+                <li><%= icon 'exclamation-triangle' %> <%= e %></li>
+            <% end %>
+        </ul>
+    <% end %>
+</div>
