--- a/app/assets/stylesheets/normalize.css
+++ b/app/assets/stylesheets/normalize.css
@@ -260,6 +260,16 @@ textarea {
 }
 
 /**
+ * Trying this to fix zooming in on inputs in ios
+ * runeh.
+ */
+input,
+select,
+textarea {
+  font-size: 16px;
+}
+
+/**
  * Address `overflow` set to `hidden` in IE 8/9/10/11.
  */
 
