--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -142,8 +142,12 @@
                 </div>
 
                 <div class="main-price__row">
-                    <i>Inkluderer forsikring opp til</i>
-                    <i><%= format_monetary_full_pretty(@ad.booking_calculator.max_insurance_coverage(@ad.main_payin_rule)) %></i>
+                    <% if @ad.boat? || @ad.motor? %>
+                        <i>Inkluderer forsikring</i>
+                    <% else %>
+                        <i>Inkluderer forsikring opp til</i>
+                        <i><%= format_monetary_full_pretty(@ad.booking_calculator.max_insurance_coverage(@ad.main_payin_rule)) %></i>
+                    <% end %>
                 </div>
 
                 <div class="main-price__row">
