--- a/app/views/application_mailer/booking_confirmed__to_renter.html.erb
+++ b/app/views/application_mailer/booking_confirmed__to_renter.html.erb
@@ -9,7 +9,7 @@
   <tr> <td>Til dato:</td> <td><%= @booking.ends_at %></td> </tr>
   <tr> <td>Antall dager:</td> <td><%= @booking.days %></td> </tr>
   <tr> <td></td> <td></td> </tr>
-  <tr> <td>Kostnad:</td> <td><%= @booking.sum_paid_by_renter %></td> </tr>
+  <tr> <td>Kostnad:</td> <td><%= number_to_currency_pretty @booking.sum_paid_by_renter %></td> </tr>
 </table>
 
 <p>
