--- a/app/views/application_mailer/booking_created__to_owner.html.erb
+++ b/app/views/application_mailer/booking_created__to_owner.html.erb
@@ -13,7 +13,7 @@
   <tr> <td>Til:</td> <td><%= @booking.ends_at %></td> </tr>
   <tr> <td>Antall dager:</td> <td><%= @booking.days %></td> </tr>
   <tr> <td></td> <td></td> </tr>
-  <tr> <td>Utbetalt til deg:</td> <td><%= @booking.sum_paid_to_owner %></td> </tr>
+  <tr> <td>Utbetalt til deg:</td> <td><%= number_to_currency_pretty @booking.sum_paid_to_owner %></td> </tr>
 </table>
 
 <p>
@@ -21,5 +21,5 @@
 </p>
 
 <p>
-  Aksepter (blå knapp)      <%= link_to 'Gå til booking', booking_path( @booking )%>
+  Aksepter (blå knapp)      <%= link_to 'Gå til booking', booking_url( @booking )%>
 </p>
