--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -142,11 +142,11 @@
                 </div>
 
                 <div class="main-price__row">
-                    <% if @ad.boat? || @ad.motor? %>
-                        <i>Inkluderer forsikring</i>
+                    <% if @ad.boat? || @ad.motor? || @ad.realestate? %>
+                        <i>Inkluderer forsikring.</i>
                     <% else %>
                         <i>Inkluderer forsikring opp til</i>
-                        <i><%= format_monetary_full_pretty(@ad.booking_calculator.max_insurance_coverage(@ad.main_payin_rule)) %></i>
+                        <i><%= format_monetary_full_pretty(@ad.booking_calculator.max_insurance_coverage(@ad.main_payin_rule)) %>.</i>
                     <% end %>
                 </div>
 
