change to eight colomns

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="nine columns">
+        <div class="eight columns">
             <%= render layout: "gray_box", locals: {title: "Aktiviteter"} do %>
                 Her finner du dine siste aktiviteter. Om du ser etter
                 gamle leieforhold finner du det under
