--- a/app/views/application_mailer/booking_cancelled__to_other_party.html.erb
+++ b/app/views/application_mailer/booking_cancelled__to_other_party.html.erb
@@ -10,8 +10,8 @@
   <%= link_to sender_user.first_name, user_url( sender_user ) %> avlyste leieforholdet <%= link_to @booking.ad.title, ad_url( @booking.ad ) %>.
 </p>
 <table>
-  <tr> <td>Fra:</td> <td><%= @booking.starts_at %></td> </tr>
-  <tr> <td>Til:</td> <td><%= @booking.ends_at %></td> </tr>
+  <tr> <td>Fra:</td> <td><%= l @booking.starts_at, format: :shorter_datetime %></td> </tr>
+  <tr> <td>Til:</td> <td><%= l @booking.ends_at, format: :shorter_datetime %></td> </tr>
   <tr> <td>Antall dager:</td> <td><%= @booking.days %></td> </tr>
 </table>
 
