--- a/app/views/application_mailer/booking_confirmed__to_renter.html.erb
+++ b/app/views/application_mailer/booking_confirmed__to_renter.html.erb
@@ -5,11 +5,11 @@
   <%= link_to @booking.user.first_name, user_url( @booking.user ) %> har akseptert din forespørsel om å leie <%= link_to @booking.ad.title, ad_url( @booking.ad ) %>.
 </p>
 <table>
-  <tr> <td>Fra dato:</td> <td><%= @booking.starts_at %></td> </tr>
-  <tr> <td>Til dato:</td> <td><%= @booking.ends_at %></td> </tr>
+  <tr> <td>Fra dato:</td> <td><%= l @booking.starts_at, format: :shorter_datetime %></td> </tr>
+  <tr> <td>Til dato:</td> <td><%= l @booking.ends_at, format: :shorter_datetime %></td> </tr>
   <tr> <td>Antall dager:</td> <td><%= @booking.days %></td> </tr>
   <tr> <td></td> <td></td> </tr>
-  <tr> <td>Kostnad:</td> <td><%= number_to_currency_pretty @booking.sum_paid_by_renter %></td> </tr>
+  <tr> <td>Kostnad:</td> <td><%= number_to_currency_pretty @booking.sum_paid_by_renter, unit: 'kr' %></td> </tr>
 </table>
 
 <p>
