--- a/app/views/application_mailer/booking_starts_at_soon__to_renter.html.erb
+++ b/app/views/application_mailer/booking_starts_at_soon__to_renter.html.erb
@@ -9,11 +9,11 @@
   Minner om at ditt leieforhold med <%= link_to sender_user.first_name, user_url( sender_user ) %> og <%= link_to @booking.ad.title, ad_url( @booking.ad ) %> begynner snart.
 </p>
 <table>
-  <tr> <td>Fra:</td> <td><%= @booking.starts_at %></td> </tr>
-  <tr> <td>Til:</td> <td><%= @booking.ends_at %></td> </tr>
+  <tr> <td>Fra:</td> <td><%= l @booking.starts_at, format: :shorter_datetime %></td> </tr>
+  <tr> <td>Til:</td> <td><%= l @booking.ends_at, format: :shorter_datetime %></td> </tr>
   <tr> <td>Antall dager:</td> <td><%= @booking.days %></td> </tr>
   <tr> <td></td> <td></td> </tr>
-  <tr> <td>Kostnad:</td> <td><%= @booking.sum_paid_by_renter %></td> </tr>
+  <tr> <td>Kostnad:</td> <td><%= number_to_currency_pretty @booking.sum_paid_by_renter, unit: 'kr' %></td> </tr>
 </table>
 
 <p>
