Made gray box support nopad flag

--- a/app/assets/stylesheets/_gray_box.scss
+++ b/app/assets/stylesheets/_gray_box.scss
@@ -14,5 +14,9 @@
     &__body {
         padding: $standard-spacing * 2;
         padding-top: $standard-spacing;
+
+        &--nopad {
+            padding: 0;
+        }
     }
 }
