Made image-and-content skip title if noe ad is passed in

--- a/app/views/application/_image_and_content_box.html.erb
+++ b/app/views/application/_image_and_content_box.html.erb
@@ -5,10 +5,12 @@
 
     <div class="img-and-content__right">
         <h5 class="img-and-content__title">
-            <% if defined? link %>
-                <%= link_to ad.display_title, link %>
-            <% else %>
-                <%= ad.display_title %>
+            <% if defined? ad %>
+                <% if defined? link %>
+                    <%= link_to ad.display_title, link %>
+                <% else %>
+                    <%= ad.display_title %>
+                <% end %>
             <% end %>
         </h5>
         <div>
