Updated header on booking

--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -32,7 +32,7 @@ $color-button-neutral: #8f8989;
 
 $color-state-green: #135453;
 $color-state-red: #ba1f29;
-$color-state-yellow: #db7917;
+$color-state-yellow: #E8C81D;
 
 $color-privacy-yellow: rgb(252, 248, 227);
 
