--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -11,43 +11,55 @@
     }
 }
 
+// copied from image and heading. should be a partial
 .booking-heading {
     display: flex;
-    align-items: flex-start;
+    padding: $standard-spacing * 2;
+    color: black;
+    align-items: center;
+    text-decoration: none;
 
-    &__image-holder {
+
+    &__title {
+        margin: 0;
+        padding: 0;
+        margin-top: 6px;
+        text-decoration: none;
+    }
+
+    &__left {
         flex: 0 0 auto;
-        width: 200px;
-        padding-right: $standard-spacing * 2;
-        padding-top: 8px;
+        width: 120px;
     }
 
-    &__info-holder {
+    &__right {
         flex: 1 1 auto;
-    }
-
-    &__image {
         width: 100%;
     }
 
-    &__user-box {
-        display: flex;
+    &__name {
+        display: inline-block;
+        text-align: center;
+        vertical-align: super;
     }
 
-    &__avatar-holder {
-        flex: 0 0 auto;
-        width: 76px;
+    @media (max-width: 376px) {
+        padding: $standard-spacing;
+
+        &__left {
+            flex: 0 0 auto;
+            width: 100px;
+        }
     }
 
-    @media (max-width: 600px) {
-        flex-direction: column;
+    @media (max-width: 321px) {
 
-        &__image-holder {
-            width: 100%;
-            padding: 0;
+        &__left {
+            display: none;
         }
     }
 }
+
 
 .booking-insurance-box {
     &__title {
