--- a/app/views/bookings/_booking_heading_box.html.erb
+++ b/app/views/bookings/_booking_heading_box.html.erb
@@ -1,21 +1,30 @@
-<%= render layout: "gray_box", locals: {title: @booking.booking_title_for(current_user) } do %>
-    <div class="booking-heading">
-        <div class="booking-heading__image-holder">
-            <%= image_tag ad.safe_image_url(:searchresult), class: 'booking-heading__image' %>
-        </div>
-        <div class="booking-heading__info-holder">
-            <h2 class="booking-heading__title"><%= ad.display_title %></h2>
-            <div class="booking-heading__user-box">
+<%= render layout: "gray_box", locals: {title: @booking.booking_title_for(current_user), nopad: true } do %>
 
-                <div class="booking-heading__avatar-holder">
-                    <%= avatar_image user, :medium %>
-                </div>
-                <div class="booking-heading__details-holder">
-                    <strong><%= link_to ad.user.display_name, user_path(user) %></strong>
-                    <br>
-                    <%= render('shared/stars.html', size: :normal, rating: user.feedback_score ) %>
-                </div>
+    <div class="booking-heading">
+        <div class="booking-heading__left">
+            <%= image_tag ad.safe_image_url(:thumb), size: '90x60', alt: '' %>
+        </div>
+
+        <div class="booking-heading__right">
+            <%= booking_status_label @booking %>
+            <h5 class="booking-heading__title">
+                <%= @booking.ad.display_title %>
+            </h5>
+            <div>
+                <%
+                    u = current_user == @booking.from_user ? @booking.user : booking.from_user
+                %>
+                    <%= avatar_image(u, :medium) %>
+                    <div class="booking-heading__name">
+                        <%= u.display_name %>
+                        <br>
+                        <%= render('shared/stars.html', rating: u.feedback_score ) %>
+                    </div>
             </div>
         </div>
     </div>
+
+
+
+
 <% end %>
