--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -9,6 +9,7 @@ $mobile: 767px;
 $tablet: 768px;
 $desktop: 960px;
 $bigscreen: 1200px;
+$flex-collapse: 512px;
 
 
 $standard-spacing: 12px;
@@ -37,3 +38,15 @@ $color-state-yellow: #E8C81D;
 $color-privacy-yellow: rgb(252, 248, 227);
 
 $subtle-shadow: 0 1px 5px rgba(black, 0.1);
+
+
+.standard-box {
+    padding: $standard-spacing * 2;
+    border-bottom: 1px solid $color-gray-background;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+    
+    @media (max-width: $flex-collapse) {
+        padding: $standard-spacing;
+    }
+}
+
