--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
                 <%= button_to 'Legg ut en ny annonse', new_ad_path, method: 'get', class: 'button button-primary', form_class: 'u-inline' %>
             <% end %>
 
-            <%= render layout: "bubble_box", locals: {title: "Mine annonser"} do %>
+            <%= render layout: "gray_box", locals: {title: "Mine annonser"} do %>
                 <% unless current_user.ads.empty? %>
                     <ul>
                         <% current_user.ads.each do |ad| %>
@@ -30,11 +30,11 @@
                 <%= button_to "Legg ut en ny annonse", new_ad_path, method: "get", class: "button button-primary" %>
             <% end %>
 
-            <%= render layout: "bubble_box", locals: {title: "Utestående vurderinger"} do %>
+            <%= render layout: "gray_box", locals: {title: "Utestående vurderinger"} do %>
                 <div>Ingen utestående vurderinger.</div>
             <% end %>
 
-            <%= render layout: "bubble_box", locals: {title: "Forespørsler"} do %>
+            <%= render layout: "gray_box", locals: {title: "Forespørsler"} do %>
                 <% unless current_user.current_bookings.empty? %>
                     <ul>
                         <% current_user.current_bookings.each do |booking| %>
@@ -50,7 +50,7 @@
                 <% end %>
             <% end %>
 
-            <%= render layout: "bubble_box", locals: {title: "Siste meldinger"} do %>
+            <%= render layout: "gray_box", locals: {title: "Siste meldinger"} do %>
                 <% unless current_user.received_messages.empty? %>
                     <ul>
                         <% current_user.received_messages.each do |message| %>
