--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -7,13 +7,13 @@
                     <%= button_to(ads_create_users_path,
                             form_class: 'u-inline',
                             class: 'button new-ad-category-selector__button',
-                            params: { category: a[:category] },
-                            disabled: ( ! current_user.can_rent_out?( a[:category] ) ),
+                            params: { category: a.category },
+                            disabled: ( ! current_user.can_rent_out?( a.category ) ),
                         ) do %>
                         <div class="new-ad-category-selector__icon">
-                            <%= image_tag a[:image], width: a[:image_width] %>
+                            <%= image_tag a.image, width: a.image_width %>
                         </div>
-                        <div class="new-ad-category-selector__title"><%= a[:title] %></div>
+                        <div class="new-ad-category-selector__title"><%= a.title %></div>
                     <% end %>
                     <% if index == 1 %>
                         <br class="new-ad-category-selector__breaker">
@@ -26,8 +26,8 @@
     <div class="row">
         <div class="six columns">
             <% @ad_categories.each do |a|
-                unless current_user.can_rent_out?( a[:category] ) %>
-                    FIXME: Du mangler verifisering for å leie ut <%= a[:title] %>. Dette kan du fikse på <%= link_to 'Min dokumentasjon', private_profile_users_path %> <br>
+                unless current_user.can_rent_out?( a.category ) %>
+                    FIXME: Du mangler verifisering for å leie ut <%= a.title %>. Dette kan du fikse på <%= link_to 'Min dokumentasjon', private_profile_users_path %> <br>
             <%  end %>
             <% end %>
             <%= render partial: "ad_input_copy" %>
