Change name of checkmark for KYC in boat ad input

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -67,7 +67,7 @@
             </div>
             <div class="u-push-down">
                 <%= f.check_box :boat_license_required %>
-                <%= f.label :boat_license_required, 'Båtførebevis er krevet.' %> (TRANSLATEME)
+                <%= f.label :boat_license_required, 'Båt over 14 fot, eller med mer enn 9,9 hestekrefter.' %> 
             </div>
         <% end %>
 
