--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -23,7 +23,7 @@
 
     <div class="row">
         <div data-controller="kalendaeBookingSelector">
-            <div class="twelve columns">
+            <div class="eight columns">
                 <div class="booking-period-selector"><div data-kalendae-container class="u-center"></div></div>
                 <%#= f.hidden_field :starts_at_time, value: '00.00' %>
                 <%#= f.hidden_field :ends_at_time,   value: '23.59' %>
