Fixed some margin on gray box

--- a/app/assets/stylesheets/_gray_box.scss
+++ b/app/assets/stylesheets/_gray_box.scss
@@ -9,6 +9,7 @@
     &__title {
         background-color: $color-subtle-gray-background;
         padding: $standard-spacing $standard-spacing*2;
+        margin-bottom: 0;
     }
 
     &__body {
